package com.alphagfx.testrail;

public interface Result {

}
