package com.alphagfx.testrail;

public interface Status extends JsonReadable {

    int id();
}
