package com.alphagfx.testrail;

public interface Template extends JsonReadable {

    Project project();

    int id();
}
